tests/NormalTests/paczka1/fuzzy1/26705588.err
Error in line 3: XgR1iK8dBi A728 69,2
Error in line 7: XgR1iK8dBi S668 10,0
Error in line 13: A989 S668 48,5
Error in line 19: dOmhxSR49jU S668 23,7
Error in line 17: XgR1iK8dBi A728 70,3
Error in line 29: dOmhxSR49jU S283 97,6
Error in line 31: dOmhxSR49jU A728 74,8
Error in line 32: A989 A989 57,5
Error in line 38: dOmhxSR49jU S^83 ^^6,8
Error in line 34: sM4Rx6 A989 66,0
